Improved audio playing logic (hopefully)

--- a/index.html
+++ b/index.html
@@ -8,23 +8,4 @@ title: Home
 </div>
 <div class="base"></div>
 
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet1.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet2.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet3.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet4.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet5.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet6.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet7.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet8.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet9.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet10.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet11.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet12.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet13.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet14.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet15.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet16.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet17.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet18.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet19.ogg" type="audio/ogg"></audio>
-<audio id="telolet-audio" preload="auto" src="{{ site.baseurl }}/public/audio/telolet20.ogg" type="audio/ogg"></audio>
+<audio id="telolet-audio"></audio>
