Use .mp3 files instead of .ogg
Now with improved compatibility.

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@ title: Home
 </div>
 <div class="base"></div>
 
-<audio id="telolet-audio"></audio>
+<audio id="telolet-audio">
+  <p>Your browser does not support the HTML5 Audio element.</p>
+</audio>
