added iOS bug notice

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Home
 ---
 
+<div class="ios-notice">
+  It has come to my attention that the button doesn't work on iOS devices. Unfortunately, Apple has courage so they ignore proper HTML5 standards. Consider borrowing your friend's Android phone to try.<br>
+  (In all seriousness, I'll fix this, as soon as possible.)
+</div>
+
 <div class="telolet-o-matron-3000">
   <button class="telolet-o-matron-3000__button" id="telolet">om telolet om</button>
 </div>
